--- a/styleAd.css
+++ b/styleAd.css
@@ -47,7 +47,7 @@
 }
 
 .button{
-    background-color: orangered;
+    background-color: #ff6200;
     color: white;
 }
 .button:hover{
@@ -56,8 +56,24 @@
 }
 
 .landingHead{
-    font-size: 5em;
+    font-size: 4em;
 }
 .bg-green{
     background-color: green;
+}
+
+
+.bgWhat{
+    background-color: #a93500;
+    fill: #a93500;
+}
+
+.bgOrganisation{
+    background-color: #c3460b;
+    fill: #c3460b;
+}
+
+.organisation-card{
+    background-color: #d4551a;
+    fill: #d4551a;
 }
