--- a/styleAd.css
+++ b/styleAd.css
@@ -1,7 +1,7 @@
 /* styles for pages created by Ashmeet  */
 @import url(https://fonts.googleapis.com/css?family=Comfortaa:200,300,400,700);
 @import url(https://fonts.googleapis.com/css2?family=Tektur&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap); 
+@import url(https://fonts.googleapis.com/css2?family=Exo+2:wght@200&display=swap);
 @import url(https://fonts.googleapis.com/css2?family=Preahvihear&display=swap);
 
 * {
@@ -23,15 +23,15 @@
 
 }
 
-.font-tektur{
+.font-tektur {
     font-family: 'Tektur';
 }
 
-.font-exo{
+.font-exo {
     font-family: 'Exo 2';
 }
 
-.font-preahvihear{
+.font-preahvihear {
     font-family: 'Preahvihear';
 }
 
@@ -42,41 +42,65 @@
     scale: 1.1;
 }
 
-.color-red{
+.color-red {
     color: rgb(145, 0, 0);
 }
 
-.button{
-    background-color: #ff6200;
+.button-l1 {
+    background-color: #e95500;
     color: white;
     transition: 0.3s;
 }
-.button:hover{
-    background-color: #ff6200;
+
+.button-l1:hover {
+    background-color: #ff5500;
     border: none;
     scale: 1.2;
 }
 
-.landingHead{
+.landingHead {
     font-size: 3.5em;
 }
-.bg-green{
+
+.bg-green {
     background-color: green;
 }
 
-.bgWhat{
+.bgWhat {
     background-color: #a93500;
     fill: #a93500;
 }
 
-.bgOrganisation{
-    background-color: #c3460b;
-    fill: #c3460b;
+.bgOrganisation {
+    background-color: #bc3c00;
+    fill: #bc3c00;
 }
 
-.organisation-card{
-    background-color: #d4551a;
-    fill: #d4551a;
+.organisation-card {
+    background-color: #c94406;
+    fill: #c94406;
     text-align: justify;
+}
 
+.bgEffects {
+    background-color: #ca480c;
+    fill: #ca480c;
+}
+
+.effect-card {
+    background-color: #cd5118;
+    fill: #d7591e;
+    text-align: justify;
+}
+
+.button-l2 {
+    background-color: #f05c00;
+    color: white;
+    transition: 0.3s;
+}
+
+.button-l2:hover {
+    background-color: #ff6200;
+    border: none;
+    scale: 1.2;
 }
