--- a/styleAs.css
+++ b/styleAs.css
@@ -225,25 +225,43 @@ label {
 }
 
 
-.footer-link{
+.footer-link {
     color: #ff8330;
 
 }
 
-.footer-link:hover{
+.footer-link:hover {
     color: #bb5715;
 }
 
-.bgBlog{
+.bgBlog {
     background-color: rgb(22, 22, 22);
 }
 
-#blogPost{
+#blogPost {
     background-color: rgb(3, 75, 88);
     position: fixed;
     height: 90vh;
     width: 90vw;
-    top: 5vh; bottom: 5vh;
-    left: 5vw; right: 5vw;
-    
+    top: 5vh;
+    bottom: 5vh;
+    left: 5vw;
+    right: 5vw;
+
+}
+
+.blogRead {
+    background-color: rgb(3, 75, 88);
+    position: absolute;
+    height: fit-content;
+    min-height: 90vh;
+    width: 90vw;
+    top: 5vh;
+    bottom: 5vh;
+    left: 5vw;
+    right: 5vw;
+}
+
+.blur {
+    filter: blur(10px);
 }
