--- a/styleAs.css
+++ b/styleAs.css
@@ -265,3 +265,8 @@ label {
 .blur {
     filter: blur(10px);
 }
+
+.closeBtn{
+    background-color: rgba(255, 255, 255, 0);
+    border-color: transparent;
+}
