--- a/styleAs.css
+++ b/styleAs.css
@@ -121,7 +121,7 @@ p {
 }
 
 .blog-card {
-    background-color: #1d1d1d;
+    background-color: #262626;
 
 }
 
@@ -235,7 +235,7 @@ label {
 }
 
 .bgBlog {
-    background-color: rgb(22, 22, 22);
+    background-color: #171717;
 }
 
 #blogPost {
